[package]
name = "visual-pcap"
version = "0.1.0"
authors = ["Eric Trombly <etrombly@yahoo.com>"]
edition = "2018"

[dependencies]
pcap = "0.7.0"
pnet = "0.25.0"
libc = "0.2.66"
chrono = "0.4.10"
ggez = "0.5.1"
legion = "0.2.1"
nphysics2d = "0.12.3"
generational-arena = "0.2.7"
ncollide2d = "0.20.0"
rayon = "1.3.0"
